[tool.poetry]
name = "gitpkg"
version = "0.1.0"
description = ""
authors = ["DrgnFireYellow <ethan@milbert.dev>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
